--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@antv/l7": "^2.21.10",
     "@antv/l7-leaflet": "^1.0.2",
     "@antv/l7-maps": "^2.21.10",
+    "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
